# VoidView

./: .gitignore  CLAUDE.md  LICENSE.txt  install.bat  install.sh  pyproject.toml  run_client.py  run_server.py
.claude/: setting.json  settings.local.json
.claude/skills/: auth-system.md  backend-api.md  data-models.md  dialog.md  fluent-ui.md  ui-design.md  video-components.md
.github/: dependabot.yml
client/: pyproject.toml
client/src/: main.py
client/src/api/: __init__.py  auth.py  client.py  experiment.py  users.py
client/src/app/: __init__.py  app_state.py  application.py  config.py  constants.py  local_server.py
client/src/embedded_server/: main.py
client/src/models/: __init__.py  experiment.py  user.py
client/src/ui/: __init__.py  login_dialog.py  main_window.py  server_config_dialog.py
client/src/ui/pages/components/: __init__.py  color_badge.py  waterfall_layout.py
client/src/ui/pages/customer_matrix/: __init__.py  customer_matrix_page.py  floating_toolbar.py  matrix_table_widget.py
client/src/ui/pages/customer_matrix/dialogs/: __init__.py  add_entity_dialog.py  add_experiment_dialog.py
client/src/ui/pages/experiment/: __init__.py  editable_field.py  experiment_card_page.py  experiment_detail_window.py  experiment_list_page.py  template_detail_panel.py  template_info_pages.py
client/src/ui/pages/user_management/: __init__.py  user_list_page.py
client/src/utils/: __init__.py  resources.py
scripts/: __init__.py  build.py  install.py  run.py
server/: API.md  pyproject.toml
server/app/: __init__.py  config.py  database.py  main.py
server/app/api/: __init__.py  deps.py
server/app/api/v1/: __init__.py  auth.py  experiments.py  router.py  users.py
server/app/core/: __init__.py  exceptions.py  security.py
server/app/models/: __init__.py  experiment.py  user.py
server/app/schemas/: __init__.py  experiment.py  user.py
server/app/services/: __init__.py  experiment_service.py  user_service.py
server/app/storage/: __init__.py  excel_store.py
server/tests/: test_connection.py
shared/: pyproject.toml
(+4 files in other folders)
