[project]
name = "voidview-client"
version = "0.1.0"
description = "VoidView Desktop Client"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "PySide6-Fluent-Widgets>=1.4",
    "httpx>=0.27",
    "aiosqlite>=0.19",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "keyring>=25.0",
    "voidview-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
